# tempy

./: .gitignore  LICENSE  PKGBUILD  README.md  pyproject.toml  setup.py
tempy/: __main__.py  config.py  console.py  data.py  parser.py  report.py  tempyrc  themes.py  weather.py
tempy/assets/: blizzard_night.txt  blowing_snow_day.txt  clear_night.txt  cloudy_day.txt  cloudy_night.txt  fog_day.txt  freezing_drizzle_day.txt  freezing_drizzle_night.txt  freezing_fog_night.txt  heavy_freezing_drizzle_night.txt  heavy_rain_at_times_day.txt  heavy_rain_night.txt  heavy_snow_night.txt  ice_pellets_night.txt  light_drizzle_day.txt  light_freezing_rain_day.txt  light_rain_day.txt  light_rain_shower_day.txt  light_rain_shower_night.txt  light_showers_of_ice_pellets_night.txt  light_sleet_night.txt  light_sleet_showers_day.txt  light_sleet_showers_night.txt  light_snow_night.txt  light_snow_showers_day.txt  light_snow_showers_night.txt  mist_day.txt  mist_night.txt  moderate_or_heavy_freezing_rain_night.txt  moderate_or_heavy_rain_shower_day.txt  moderate_or_heavy_rain_with_thunder_day.txt  moderate_or_heavy_showers_of_ice_pellets_day.txt  moderate_or_heavy_sleet_night.txt  moderate_or_heavy_sleet_showers_day.txt  moderate_or_heavy_snow_showers_day.txt  moderate_or_heavy_snow_with_thunder_day.txt  moderate_or_heavy_snow_with_thunder_night.txt  moderate_rain_at_times_day.txt  moderate_rain_day.txt  moderate_snow_day.txt  (+20 more)
tests/: test_args.py  test_config.py  test_parser.py  test_render.py  test_server.py  test_tempyrc.py
tests/sample_tempyrcs/: api  commented  location  units  (+4 more)
